Adding build Model

--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -512,13 +512,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Attn(nn.Module):\n",
     "    def __init__(self,method,hidden_size):\n",
-    "        super(self,Attn).__init__()\n",
+    "        super(Attn,self).__init__()\n",
     "        self.method = method\n",
     "        if self.method not in ['dot', 'general', 'concat']:\n",
     "            raise ValueError(self.method, \"is not an appropriate attention method.\")\n",
@@ -565,12 +565,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LuongAttnDecoderRNN(nn.Module):\n",
-    "    def __init__(self,attn_model,hidden_size,embedding,output_size,n_layers=1,dropout=0):\n",
+    "    def __init__(self,attn_model, embedding, hidden_size, output_size, n_layers=1, dropout=0.1):\n",
     "        super(LuongAttnDecoderRNN,self).__init__()\n",
     "        \n",
     "        self.attn_model = attn_model\n",
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,6 +793,134 @@
     "        return all_tokens, all_scores\n",
     "        \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate(encoder,decoder,searcher,voc,sentance,max_length= max_length ):\n",
+    "    index_batch =[indexesFromSentence(voc,sentence)]\n",
+    "    \n",
+    "    lengths = torch.tensor([len(indexes) for indexes in index_batch])\n",
+    "    \n",
+    "    # Transpose dimensions of batch to match models' expectations\n",
+    "    input_batch = torch.LongTensor(index_batch).transpose(0, 1)\n",
+    "    \n",
+    "    input_batch = input_batch.to(device)\n",
+    "    lengths = lengths.to(device)\n",
+    "    \n",
+    "    tokens, scores = searcher(input_batch, lengths, max_length)\n",
+    "    \n",
+    "    decoded_words = [voc.index_to_word[token.item()] for token in tokens]\n",
+    "    \n",
+    "    return decoded_words\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluateInput(encoder,decoder,searcher, voc):\n",
+    "    input_sentance=''\n",
+    "    \n",
+    "    while(1):\n",
+    "        try:\n",
+    "            input_sentence = input('> ')\n",
+    "            \n",
+    "            if input_sentence == 'q' or input_sentence == 'quit': \n",
+    "                break\n",
+    "            \n",
+    "            input_sentence = normalizeString(input_sentence)\n",
+    "            \n",
+    "            output_words = evaluate(encoder, decoder, searcher, voc, input_sentence)\n",
+    "            output_words[:] = [x for x in output_words if not (x == 'EOS' or x == 'PAD')]\n",
+    "            \n",
+    "            print('Bot:', ' '.join(output_words))\n",
+    "            \n",
+    "        except KeyError:\n",
+    "            print(\"Error: Encountered unknown word.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setting Hyper Parameters while runnibg model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Building encoder and decoder ...\n",
+      "Models built\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name= \"chatbot\"\n",
+    "attention_model = \"dot\" # 'general' 'concat'\n",
+    "\n",
+    "hidden_size = 500\n",
+    "encoder_n_layers = 4 #2\n",
+    "decoder_n_layers = 4 #2\n",
+    "dropout = 0.1\n",
+    "batch_size = 64\n",
+    "\n",
+    "loadFilename = None\n",
+    "checkpoint_iter = 4000\n",
+    "\n",
+    "#loadFilename = os.path.join(save_dir, model_name, corpus_name,\n",
+    "#                            '{}-{}_{}'.format(encoder_n_layers, decoder_n_layers, hidden_size),\n",
+    "#                            '{}_checkpoint.tar'.format(checkpoint_iter))\n",
+    "\n",
+    "\n",
+    "if loadFilename:\n",
+    "    checkpoint = torch.load(loadFilename)\n",
+    "    #checkpoint = torch.load(loadFilename, map_location=torch.device('cpu'))\n",
+    "    \n",
+    "    encoder_sd = checkpoint['en']\n",
+    "    decoder_sd = checkpoint['de']\n",
+    "    \n",
+    "    encoder_optimizer_sd = checkpoint['en_opt']\n",
+    "    decoder_optimizer_sd = checkpoint['de_opt']\n",
+    "    embedding_sd = checkpoint['embedding']\n",
+    "    voc.__dict__ = checkpoint['voc_dict']\n",
+    "    \n",
+    "print('Building encoder and decoder ...')\n",
+    "\n",
+    "embedding = nn.Embedding(voc.word_number, hidden_size)\n",
+    "\n",
+    "if loadFilename:\n",
+    "    embedding.load_state_dict(embedding_sd)\n",
+    "    \n",
+    "encoder = EncoderRNN(hidden_size, embedding, encoder_n_layers, dropout)\n",
+    "decoder = LuongAttnDecoderRNN(attention_model, embedding, hidden_size, voc.word_number, decoder_n_layers, dropout)\n",
+    "\n",
+    "if loadFilename:\n",
+    "    encoder.load_state_dict(encoder_sd)\n",
+    "    decoder.load_state_dict(decoder_sd)\n",
+    "    \n",
+    "encoder = encoder.to(device)\n",
+    "decoder = decoder.to(device)\n",
+    "print('Models built')"
    ]
   },
   {
